# dataspoc-pipe

./: .dockerignore  .gitignore  AGENT.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RULES.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
docs/: howto-google-sheets-s3.md  howto-multi-stage-lake.md
docs/usage/: pipe-guia-pt-br.md  pipe-guide-en.md
examples/: Dockerfile.demo  README.md  e2e-demo.sh  mcp_config.json  mock_tap_csv.py  sdk_usage.py
src/dataspoc_pipe/: __init__.py  __main__.py  catalog.py  cli.py  config.py  engine.py  mcp_server.py  sdk.py  singer.py  state.py  storage.py  tap_templates.py
src/dataspoc_pipe/builtin_taps/: __init__.py  google_sheets_public.py  parquet.py
tests/: mock_tap.py  test_catalog.py  test_cli.py  test_config.py  test_engine.py  test_state.py  test_storage.py
